[gd_scene load_steps=7 format=3 uid="uid://dmknx1foqdotd"]

[ext_resource type="Script" path="res://MoveableUnit.gd" id="1_4r2vr"]
[ext_resource type="Texture2D" uid="uid://dhvd4dv6u6qi1" path="res://art/character/dummy.png" id="1_pvc8a"]
[ext_resource type="Texture2D" uid="uid://b3435eq173fcm" path="res://art/cursor.png" id="1_s44uf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w3ijd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pvc8a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pvc8a")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dnub6"]
radius = 7.0

[sub_resource type="SpriteFrames" id="SpriteFrames_fkcw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_s44uf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MoveableUnit" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_4r2vr")

[node name="UnitSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w3ijd")
animation = &"walking"
frame_progress = 0.598672

[node name="CollShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dnub6")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="SelCur" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_fkcw0")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
